修正文件排序的问题